deployments/k8s/maestro-frontend.yaml
---

# Maestro frontend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maestro-frontend-deployment
spec:
  selector:
    matchLabels:
      app: maestro-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: maestro-frontend
    spec:

      containers:
        - name: maestro-frontend
          image: ghcr.io/yukitsune/maestro-frontend:v0.1.3
          ports:
            - containerPort: 3000
---

# Maestro frontend service
apiVersion: v1
kind: Service
metadata:
  name: maestro-frontend-service
spec:
  type: ClusterIP
  selector:
    app: maestro-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

# Maestro frontend ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: maestro-frontend-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`maestro.yukitsune.dev`) # Wish this could be put into a ConfigMap 😔
      kind: Rule
      services:
        - name: maestro-frontend-service
          port: 80
